# owl-watch

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/config/: celery.py  settings.py  urls.py
apps/api/monitors/: models.py  tasks.py  urls.py  views.py
apps/api/monitors/api/: monitor_create_view.py
apps/web/: package-lock.json
apps/web/src/: App.tsx
apps/web/src/api/: client.ts  monitor.ts
apps/web/src/components/: MonitorForms.tsx
apps/web/src/pages/: Dashboard.tsx  Home.tsx
